# bsky_starter_pack

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  README.md  bsky_users.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: pull_request.yaml  update-starter-pack.yaml
src/starterpacks/: __init__.py  update_starterpacks.py
tests/: test_update_starterpacks.py
