[project]
name = "starterpacks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ubaumann", email = "github@m.ubaumann.ch" }
]
requires-python = ">=3.10"
dependencies = [
    "atproto>=0.0.55",
    "pydantic>=2.10.1",
    "rich>=13.9.4",
    "ruamel-yaml>=0.18.6",
    "typer>=0.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "yamllint>=1.35.1",
]

[tool.uv.sources]
atproto = { git = "https://github.com/MarshalX/atproto.git" }
